--- a/src/examples/barcharts/grouped-barchart/grouped-barchart.css
+++ b/src/examples/barcharts/grouped-barchart/grouped-barchart.css
@@ -4,7 +4,7 @@
   min-height: 25rem;
   container-type: inline-size;
   .window-rv {
-    /* Categorical Color Encoding can be changed as desired with one liners */
+    /* categorical color encoding can be changed as desired */
     [data-style=categorical-0] { --color-categorical-0: #4f8c9d; }
     [data-style=categorical-1] { --color-categorical-1: #e23209; }
     [data-style=categorical-2] { --color-categorical-2: #539322; }
@@ -25,15 +25,14 @@
     }
   }
 
-  /* Change layout of chart for narrow screen widths */
+  /* for narrow screen widths */
   @container (width < 45rem) {
     .window-rv {
-      /* Changing the size of the right padding container becomes necessary
-       since a bar label would be cut off otherwise */
+      /* increase size of right padding container so bar label fits */
       --chart-padding-right: calc(3rem - clamp(0rem, 8vw, 3rem));
     }
     .chart {
-      /* The chart legend moves below the chart */
+      /* move legend below chart */
       grid-template: auto 1fr auto / 1fr;
       grid-template-areas: 'header' 'padding-wrapper' 'legend';
     }
@@ -47,7 +46,8 @@
       flex-direction: row;
       justify-content: space-evenly;
     }
-    /* Avoid intersecting tick labels of a flipped y-axis by thinning out the ticks */
+    /* thin out y-axis ticks to avoid intersecting tick labels
+       (since y-axis is flipped for narrow widths) */
     .axis-y .tick:nth-of-type(2n) { display: none; }
   }
 }
