--- a/src/examples/linecharts/linechart-multiline/linechart-multiline.css
+++ b/src/examples/linecharts/linechart-multiline/linechart-multiline.css
@@ -12,17 +12,25 @@
     .items { gap: 1rem; }
   }
 
+  /* hide x-axis ticks by default */
   .point:not(.inspect-nearest), .axis-x .tick { display: none; }
 
+  /* for average and wide screen widths */
   @container (width >= 30rem) {
     .point-category {
-      .point:first-of-type, .point:last-of-type, .point:nth-of-type(2n) { display: block; }
+      /* show first, last, and each 2nd data point */
+      .point:first-of-type, .point:last-of-type, .point:nth-of-type(2n) {
+        display: block;
+      }
     }
+    /* show all x-axis ticks */
     .axis-x .tick { display: block}
   }
 
+  /* for narrow to average screen widths */
   @container (width <= 50rem) {
     .chart {
+      /* move legend on top of chart */
       grid-template: auto auto 1fr / 1fr;
       grid-template-areas: 'header' 'legend' 'padding-wrapper';
     }
@@ -35,10 +43,15 @@
     .legend .items { flex-direction: row; }
   }
 
+  /* for narrow screen widths */
   @container (width < 30rem) {
     .point-category {
-      .point:first-of-type, .point:last-of-type, .point:nth-of-type(4n) { display: block; }
+      /* show first, last, and each 4th data point */
+      .point:first-of-type, .point:last-of-type, .point:nth-of-type(4n) {
+        display: block;
+      }
     }
+    /* show each 4th x-axis tick */
     .axis-x .tick:nth-of-type(4n) { display: block}
   }
 }
