--- a/src/examples/scatterplots/scatterplot/scatterplot.css
+++ b/src/examples/scatterplots/scatterplot/scatterplot.css
@@ -6,8 +6,10 @@
   .window-rv {
     container-type: inline-size;
 
+    /* for narrow screen widths */
     @container (width < 40rem) {
       .chart {
+        /* move legend below chart */
         grid-template: auto 1fr auto / 1fr;
         grid-template-areas: 'header' 'padding-wrapper' 'legend';
         --chart-padding-right: 1rem;
@@ -28,7 +30,8 @@
           grid-template-columns: auto auto auto;
         }
       }
-
+      /* thin out y-axis ticks to avoid intersecting tick labels
+         (since y-axis is flipped for narrow widths) */
       .axis-y .tick {
         display: none;
 
